# tacklelib

./: .externals  .gitattributes  .gitignore  .gitlinks  .gitmodules  .gitsvnextmodules  .svnignore  01_preconfigure.bat  01_preconfigure.sh  CMakeLists.txt  README.md  README_EN.deps.txt  README_EN.linux_x86_64.txt  README_EN.python_xonsh.known_issues.txt  README_EN.txt  TODO.txt  __init__.bat  __init__.sh  changelog.txt  configure.bat  configure_gen.bat.in  configure_gen.sh.in  configure_nogen.bat.in  configure_nogen.sh.in  debug.hpp  environment_config.cmake.in  environment_local.cmake.in  environment_local.vars.in  optimization.hpp  tacklelib.hpp
.github/: FUNDING.yml
.github/workflows/: accum-gh-clone-stats.yml  accum-gh-view-stats.yml  tacklelib-gh-clone-stats.yml  tacklelib-gh-view-stats.yml
01_reorganization/: .svnignore  01_preconfigure.bat  01_preconfigure.sh  CMakeLists.txt  README_EN.deps.txt  README_EN.txt  TODO.txt  changelog.txt
01_reorganization/__init__/: __init__.bat  __init__.sh
01_reorganization/_config/: config.system.vars.in
01_reorganization/_scripts/: 01_generate_src.bat  01_generate_src.sh  02_generate_config.bat  02_generate_config.sh  03_configure.bat  03_configure.sh  04_build.bat  04_build.sh  05_install.bat  05_install.sh  06_post_install.sh  07_pack.bat  07_pack.sh  README_EN.txt  changelog.txt  license.txt
01_reorganization/bash/: changelog.txt
01_reorganization/bash_tests/: __init__.sh  changelog.txt
01_reorganization/cmake_tests/: changelog.txt
01_reorganization/python/: README_EN.txt  TODO.txt  changelog.txt  install_python_modules.bat
01_reorganization/python_tests/: README_EN.txt  changelog.txt  conftest.py
01_reorganization/src/: tacklelib_private.hpp
__init__/: __init__.bat  __init__.cmake  __init__.sh
_build/: 01_generate_src.bat  01_generate_src.sh  02_generate_config.bat  02_generate_config.sh  03_configure.bat  03_configure.sh  04_build.bat  04_build.sh  05_install.bat  05_install.sh  06_post_install.sh  07_pack.bat  07_pack.sh  README_EN.txt  changelog.txt
_build/__init__/: __init0__.bat  __init0__.sh  __init1__.bat  __init1__.sh  __init2__.bat  __init2__.sh  __init__.bat  __init__.sh  script_init.bat
_build/admin/: chown_mod.sh
_build/deploy/: collect_ldd_deps.sh  create_links.sh  gen_links.sh
_build/tools/: makelib.sh  projectlib.sh
_config/: config.0.vars.in  config.system.vars.in  environment_system.vars.in  environment_user.vars.in
_config/cmake/: config.0.vars.in  config.3dparty.vars.in  config.system.vars.in
_scripts/: 01_generate_src.bat  01_generate_src.sh  02_generate_config.bat  02_generate_config.sh  03_configure.bat  03_configure.sh  04_build.bat  04_build.sh  05_install.bat  05_install.sh  06_post_install.sh  07_pack.bat  07_pack.sh  README_EN.txt  __init0__.bat  __init0__.sh  __init1__.sh  __init2__.bat  __init2__.sh  __init__.bat  __init__.sh  bash_entry  build_x86.bat  build_x86.sh  buildlib.sh  changelog.txt  configure_gen.bat  configure_gen.sh  configure_nogen.bat  configure_nogen.sh  configure_src.bat  configure_src.sh  install_x86.bat  install_x86.sh  pack_x86.bat  pack_x86.sh  post_install_x86.sh  projectlib.sh  traplib.sh
_scripts/__init__/: __init0__.bat  __init0__.sh  __init1__.bat  __init1__.sh  __init2__.bat  __init2__.sh
_scripts/admin/: chown_mod.sh
_scripts/deploy/: collect_ldd_deps.sh  create_links.sh  gen_links.sh  links.vars
_scripts/tools/: .svnignore  __init__.bat  bash_entry  buildlib.sh  check_config_version.bat  cmdoplib.py  get_GENERATOR_IS_MULTI_CONFIG.bat  get_GENERATOR_IS_MULTI_CONFIG.sh  list_urls_in_files.py  make_output_directories.bat  projectlib.sh  set_vars_from_files.bat  set_vars_from_files.sh  set_vars_from_locked_file_pair.bat  set_vars_from_locked_file_pair.sh  traplib.sh  update_build_type.bat
bash/: README_EN.txt  changelog.txt
bash/__init__/: __init__.sh
bash/pyxvcs/: cmdop.py.sh  configure.py.sh
bash/tacklelib/: README_EN.txt  baselib.sh  bash_entry  bash_tacklelib  buildlib.sh  changelog.txt  funclib.sh  hashlib.sh  load_config.sh  stringlib.sh  testlib.sh  traplib.sh
bash_tests/: README_EN.txt  __init__.sh  changelog.txt
bash_tests/__init__/: __init__.sh
cmake/: BuildProject.cmake  Common.cmake  EnableTargetsExtension.cmake  Eval.cmake  ExternalProjectEx.cmake  FindGlobal3dpartyEnvironments.cmake  ForwardVariables.cmake  MakeTemp.cmake  README_EN.txt  ReturnCodeFile.cmake  SetVarsFromFiles.cmake  Std.cmake  TestLib.cmake  TestModule.cmake  Version.cmake  changelog.txt
cmake/tacklelib/: Checks.cmake  EnableTargetsExtension.cmake  Eval.cmake  File.cmake  ForwardArgs.cmake  ForwardVariables.cmake  Handlers.cmake  List.cmake  MakeTemp.cmake  Math.cmake  Project.cmake  Props.cmake  README_EN.txt  Reimpl.cmake  ReturnCodeFile.cmake  SetVarsFromFiles.cmake  Std.cmake  String.cmake  TODO.txt  Time.cmake  Utility.cmake  Version.cmake  changelog.txt
cmake/tools/: CMakeEval.cmd.cmake  CPackMakeConfig.cmake  ConfigureFile.cmake  GenerateBuildVersion.cmake  (+2 more)
cmake_tests/: README_EN.txt  changelog.txt  test_all.cmake  tests_01_script_mode.cmake  tests_01_unit.cmake  tests_02_bench.cmake  tests_02_build_mode.cmake  tests_bench.cmake  tests_unit.cmake
config/: environment_system.vars.in  environment_user.vars.in
includes/: .svnignore  common_types.hpp  debug.hpp.in  optimization.hpp.in  setup.hpp.in  tacklelib.hpp
python/: README_EN.txt  changelog.txt  install_python_modules.bat  install_python_modules.sh  list_urls_in_files.py
python_tests/: README_EN.txt  changelog.txt
src/: .svnignore  common.cpp  common.hpp  debug.hpp  debug.hpp.in  optimization.hpp  optimization.hpp.in  setup.hpp.in  tacklelib.cpp  tacklelib.hpp  tacklelib_private.hpp
tackle/: aligned_storage.hpp  aligned_storage_decl.hpp  basic_iterator.hpp  file_handle.cpp  file_handle.hpp  file_reader.hpp  smart_handle.hpp  stream_storage.hpp
utility/: algorithm.hpp  assert.hpp  crc.cpp  crc.hpp  crc_tables.hpp  debug.cpp  debug.hpp  hash.hpp  math.hpp  platform.hpp  preprocessor.hpp  static_assert.hpp  type_traits.hpp  utility.cpp  utility.hpp
(+861 files in other folders)
